--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -2,7 +2,7 @@
 
 数据同步功能旨在帮助用户实现两个数据源之间的数据实时同步。数据同步功能可应用于异地多活、数据异地灾备、本地数据灾备、数据异地多活、跨境数据同步、查询与报表分流、云BI及实时数据仓库等多种业务场景。
 
-## 支持的数据库和同步拓扑 {#section_qlr_zvj_zgb .section}
+## 支持的数据库/同步初始化类型/同步拓扑 {#section_qlr_zvj_zgb .section}
 
 详情请参见[支持的数据库/同步初始化类型/同步拓扑](../../../../cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md#)。
 
