--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -26,7 +26,7 @@
 
 |源数据库|目标数据库|迁移类型|
 |:---|:----|:---|
-| -   MySQL
+| -   自建MySQL
 
 5.1、5.5、5.6、5.7、8.0版本
 
@@ -35,7 +35,7 @@
 所有版本
 
 
- | MySQL
+ | 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
@@ -117,7 +117,7 @@
 -   增量数据迁移
 
  |
-| MySQL
+| 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
@@ -152,13 +152,13 @@
 -   增量数据迁移
 
  |
-| SQL Server
+| 自建SQL Server
 
  2005、2008、2008R2、2012、2014、2016版本
 
  **说明：** 源库为2005版本时不支持增量迁移。
 
- | SQL Server
+ | 自建SQL Server
 
  2005、2008、2008R2、2012、2014、2016版本
 
@@ -176,11 +176,11 @@
 -   增量数据迁移
 
  |
-| Oracle（RAC/非RAC架构）
+| 自建Oracle（RAC/非RAC架构）
 
  9i、10g、11g版本
 
- | Oracle（RAC/非RAC架构）
+ | 自建Oracle（RAC/非RAC架构）
 
  9i、10g、11g版本
 
@@ -198,7 +198,7 @@
 -   增量数据迁移
 
  |
-| MySQL
+| 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
@@ -224,11 +224,11 @@
 -   增量数据迁移
 
  |
-| PostgreSQL
+| 自建PostgreSQL
 
  9.4、9.5、9.6、10.1、10.8、10.9版本
 
- | PostgreSQL
+ | 自建PostgreSQL
 
  9.4、9.5、9.6、10.1、10.8、10.9版本
 
@@ -246,15 +246,27 @@
 -   增量数据迁移
 
  |
-| MongoDB（单节点/副本集/分片集群架构）
+| -   自建MongoDB（单节点/副本集/分片集群架构）
 
- 3.0、3.2、3.4、3.6、4.0版本
+3.0、3.2、3.4、3.6、4.0版本
 
- **说明：** 暂不支持将分片集群架构的阿里云MongoDB实例作为源库。
+-   阿里云MongoDB实例（单节点/副本集/分片集群架构）
 
- | MongoDB（单节点/副本集/分片集群架构）
+所有版本
 
- 3.0、3.2、3.4、3.6、4.0版本
+**说明：** 暂不支持将分片集群架构的阿里云MongoDB实例作为源库。
+
+
+ | -   自建MongoDB（单节点/副本集/分片集群架构）
+
+3.0、3.2、3.4、3.6、4.0版本
+
+-   阿里云MongoDB实例（单节点/副本集/分片集群架构）
+
+所有版本
+
+**说明：** 暂不支持将分片集群架构的阿里云MongoDB实例作为源库。
+
 
  | -   全量数据迁移
 -   增量数据迁移
@@ -262,13 +274,23 @@
  **说明：** MongoDB属于NoSQL数据库，无需结构迁移。
 
  |
-| Redis（源库仅支持单机版架构）
+| -   自建Redis（仅支持单机架构）
 
- 2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0版本
 
- | Redis（单机版/集群架构）
+-   阿里云Redis实例（仅支持单机架构）
 
- 2.8、3.0、3.2、4.0、5.0版本
+2.8、4.0版本
+
+
+ | -   自建Redis（单机/集群架构）
+
+2.8、3.0、3.2、4.0版本
+
+-   阿里云Redis实例（单机/集群架构）
+
+所有版本
+
 
  | -   全量数据迁移
 -   增量数据迁移
@@ -276,11 +298,11 @@
  **说明：** Redis属于NoSQL数据库，无需结构迁移。
 
  |
-| DB2
+| 自建DB2
 
  9.7、10.5版本
 
- | MySQL
+ | 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
