--- a/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
+++ b/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
@@ -23,11 +23,11 @@
 
 ## 支持的数据库/同步初始化类型/同步拓扑 {#section_ilb_mzh_t3b .section}
 
-下表中各类自建数据库（例如MySQL、Redis）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+下表中各类自建数据库（例如MySQL、Redis等）的部署位置可以是**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|目标数据库|初始化类型|同步拓扑|
 |:---|:----|:----|----|
-| -   MySQL
+| -   自建MySQL
 
 5.1、5.5、5.6、5.7、8.0版本
 
@@ -36,7 +36,7 @@
 所有版本
 
 
- | MySQL
+ | 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
@@ -116,7 +116,7 @@
  全量数据初始化
 
  |单向同步|
-| Kafka
+| 自建Kafka
 
  0.10、1.0集群版本
 
@@ -148,7 +148,7 @@
  |单向同步|
 | POLARDB for MySQL
 
- 所有版本| MySQL
+ 所有版本| 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
 
@@ -191,7 +191,7 @@
  全量数据初始化
 
  |单向同步|
-| Kafka
+| 自建Kafka
 
  0.10、1.0集群版本
 
@@ -209,9 +209,14 @@
  全量数据初始化
 
  |单向同步|
-| RDS for PostgreSQL
+| -   自建PostgreSQL
 
- 所有版本
+9.4.8及以上版本
+
+-   RDS for PostgreSQL
+
+所有版本
+
 
  | 分析型数据库PostgreSQL版
 
@@ -220,15 +225,23 @@
  所有版本
 
  |全量数据初始化|单向同步|
-| Redis（单机/集群架构）
+| -   自建Redis（单机/集群架构）
 
- 2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0版本
 
- **说明：** 当源库为阿里云Redis实例时，数据库版本需为4.0版本。
+-   阿里云Redis实例（单机/集群架构）
 
- | Redis（单机/集群架构）
+4.0版本
 
- 2.8、3.0、3.2、4.0、5.0版本
+
+ | -   自建Redis（单机/集群架构）
+
+2.8、3.0、3.2、4.0版本
+
+-   阿里云Redis实例（单机/集群架构）
+
+所有版本
+
 
  | 结构初始化
 
