--- a/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
+++ b/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
@@ -2,28 +2,5 @@
 
 为保障数据迁移任务的顺利执行，DTS在预检查阶段对源库的版本号进行检查。
 
-该检查项主要检查DTS的数据迁移操作是否支持源数据库的版本号。DTS支持的源数据库版本如下表所示。
-
-|源数据库类型|支持的版本号|
-|:-----|:-----|
-|MySQL| -   全量数据迁移时，支持的版本号为5.0、5.1、5.5、5.6、5.7、8.0。
--   增量数据迁移时，支持的版本号为5.1、5.5、5.6、5.7、8.0。
-
- |
-|SQL Server| 2005、2008、2008R2、2012、2014、2016。
-
- |
-|Oracle| 10g、11g、12c。
-
- |
-|PostgreSQL| -   全量数据迁移时，支持的版本号为9.2、9.3、9.4、9.5、9.6、10.x。
--   增量数据迁移时，支持的版本号为9.4.8、9.5、9.6、10.x。
-
- |
-|MongoDB| 3.0、3.2、3.4、3.6、4.0。
-
- |
-|Redis| 2.8、3.0、3.2、4.0。
-
- |
+该检查项主要检查DTS的数据迁移操作是否支持源数据库的版本号，DTS支持的源数据库版本请参见[支持的数据库和迁移类型](cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md#)。
 
