--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -80,7 +80,7 @@
  |
 | 分析型数据库MySQL版（AnalyticDB for MySQL）
 
- 2.0、3.0版本
+ 2.0版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -137,7 +137,7 @@
  |
 | 分析型数据库MySQL版（AnalyticDB for MySQL）
 
- 2.0、3.0版本
+ 2.0版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -217,7 +217,7 @@
  |
 | 分析型数据库MySQL版（AnalyticDB for MySQL）
 
- 2.0、3.0版本
+ 2.0版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -250,11 +250,9 @@
 
 3.0、3.2、3.4、3.6、4.0版本
 
--   阿里云MongoDB实例（单节点/副本集/分片集群架构）
+-   阿里云MongoDB实例（单节点/副本集架构）
 
 所有版本
-
-**说明：** 暂不支持将分片集群架构的阿里云MongoDB实例作为源库。
 
 
  | -   自建MongoDB（单节点/副本集/分片集群架构）
@@ -269,7 +267,7 @@
  | -   全量数据迁移
 -   增量数据迁移
 
- **说明：** MongoDB属于NoSQL数据库，无需结构迁移。
+ **说明：** 属于NoSQL数据库，无需结构迁移。
 
  |
 | -   自建Redis（仅支持单机架构）
@@ -293,7 +291,7 @@
  | -   全量数据迁移
 -   增量数据迁移
 
- **说明：** Redis属于NoSQL数据库，无需结构迁移。
+ **说明：** 属于NoSQL数据库，无需结构迁移。
 
  |
 | 自建DB2
