--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -95,6 +95,15 @@
 -   增量数据迁移
 
  |
+| 自建Oracle（RAC/非RAC架构）
+
+ 9i、10g、11g版本
+
+ | -   结构迁移
+-   全量数据迁移
+-   增量数据迁移
+
+ |
 | OceanBase
 
  所有版本
@@ -281,7 +290,7 @@
 
  | -   自建Redis（单机/集群架构）
 
-2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0、5.0版本
 
 -   阿里云Redis实例（单机/集群架构）
 
