--- a/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
+++ b/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
@@ -191,6 +191,11 @@
  全量数据初始化
 
  |单向同步|
+| Datahub
+
+ 所有版本
+
+ |结构初始化|单向同步|
 | 自建Kafka
 
  0.10、1.0集群版本
@@ -236,16 +241,16 @@
 
  | -   自建Redis（单机/集群架构）
 
-2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0、5.0版本
 
 -   阿里云Redis实例（单机/集群架构）
 
 所有版本
 
 
- | 结构初始化
+ | 全量数据初始化
 
- 全量数据初始化
+ **说明：** 属于NoSQL数据库，无需结构初始化。
 
  |单向同步|
 
