--- a/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
+++ b/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
@@ -10,7 +10,7 @@
 
 各类场景的迁移方案请参见[DTS数据迁移方案概览](../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
 
-迁移的源数据库（例如MySQL、SQL Server、Oracle等）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+**说明：** 源或目标数据库为自建数据库时，可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|目标数据库|迁移类型|
 |:---|:----|:---|
@@ -80,6 +80,15 @@
  9.4、9.5、9.6、10.1、10.8、10.9版本
 
  | -   全量数据迁移
+-   增量数据迁移
+
+ |
+| 自建Oracle（RAC/非RAC架构）
+
+ 9i、10g、11g版本
+
+ | -   结构迁移
+-   全量数据迁移
 -   增量数据迁移
 
  |
@@ -269,7 +278,7 @@
 
  | -   自建Redis（单机/集群架构）
 
-2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0、5.0版本
 
 -   阿里云Redis实例（单机/集群架构）
 
@@ -300,7 +309,7 @@
 
 数据同步功能帮助您实现数据源之间的数据实时同步，适用于数据异地多活、数据异地灾备、本地数据灾备、跨境数据同步、查询与报表分流、云BI及实时数据仓库等多种业务场景。下表列出了数据同步功能支持的数据库、同步初始化类型和同步拓扑。
 
-同步的源数据库（例如MySQL、Redis等）的部署位置可以是**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+**说明：** 源或目标数据库为自建数据库时，可以是**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|目标数据库|初始化类型|同步拓扑|
 |:---|:----|:----|----|
@@ -518,7 +527,7 @@
 
  | -   自建Redis（单机/集群架构）
 
-2.8、3.0、3.2、4.0版本
+2.8、3.0、3.2、4.0、5.0版本
 
 -   阿里云Redis实例（单机/集群架构）
 
@@ -527,7 +536,7 @@
 
  | 全量数据初始化
 
- **说明：** 属于NOSQL数据库，无需结构初始化。
+ **说明：** 属于NoSQL数据库，无需结构初始化。
 
  |单向同步|
 
@@ -535,7 +544,7 @@
 
 数据订阅功能旨在帮助用户获取RDS for MySQL、DRDS、Oracle实时增量数据，用户能够根据自身业务需求自由消费增量数据，搭建/实现多种业务场景，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时等。
 
-订阅的源Oracle数据库的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+**说明：** 订阅的源Oracle数据库的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|支持订阅的数据类型|
 |----|---------|
@@ -562,9 +571,10 @@
 
 数据订阅功能旨在帮助用户获取MySQL、RDS for MySQL、POLARDB for MySQL、Oracle的实时增量数据，用户能够根据自身业务需求自由消费增量数据，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时同步等多种业务场景。
 
-**说明：** 原有的数据订阅功能使用成本相对较高。为提升用户体验，降低使用成本，阿里云对数据订阅功能进行升级，可实现数据的多下游重复消费，详情请参见[数据订阅（新）](cn.zh-CN/产品简介/功能特性/数据订阅（新）.md#)。
+**说明：** 
 
-订阅的源数据库（例如MySQL、Oracle）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+-   原有的数据订阅功能使用成本相对较高。为提升用户体验，降低使用成本，阿里云对数据订阅功能进行升级，可实现数据的多下游重复消费，详情请参见[数据订阅（新）](cn.zh-CN/产品简介/功能特性/数据订阅（新）.md#)。
+-   订阅的源数据库（例如MySQL、Oracle）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|支持订阅的数据类型|
 |----|---------|
