--- a/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
+++ b/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
@@ -214,14 +214,9 @@
  全量数据初始化
 
  |单向同步|
-| -   自建PostgreSQL
+| RDS for PostgreSQL
 
-9.4.8及以上版本
-
--   RDS for PostgreSQL
-
-所有版本
-
+ 所有版本
 
  | 分析型数据库PostgreSQL版
 
