--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -200,7 +200,7 @@
  |
 | RDS for PPAS
 
- 9.3版本
+ 9.3、10版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -210,6 +210,15 @@
 | 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
+
+ | -   结构迁移
+-   全量数据迁移
+-   增量数据迁移
+
+ |
+| RDS for MySQL
+
+ 所有版本
 
  | -   结构迁移
 -   全量数据迁移
