--- a/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
+++ b/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
@@ -188,7 +188,7 @@
  |
 | RDS for PPAS
 
- 9.3版本
+ 9.3、10版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -198,6 +198,15 @@
 | 自建MySQL
 
  5.1、5.5、5.6、5.7、8.0版本
+
+ | -   结构迁移
+-   全量数据迁移
+-   增量数据迁移
+
+ |
+| RDS for MySQL
+
+ 所有版本
 
  | -   结构迁移
 -   全量数据迁移
@@ -500,14 +509,9 @@
  全量数据初始化
 
  |单向同步|
-| -   自建PostgreSQL
+| RDS for PostgreSQL
 
-9.4.8及以上版本
-
--   RDS for PostgreSQL
-
-所有版本
-
+ 所有版本
 
  | 分析型数据库PostgreSQL版
 
