--- a/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
+++ b/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
@@ -545,9 +545,9 @@
 
 ## 数据订阅（旧版） {#section_wtn_d7o_8fy .section}
 
-数据订阅功能旨在帮助用户获取RDS for MySQL、DRDS、Oracle实时增量数据，用户能够根据自身业务需求自由消费增量数据，搭建/实现多种业务场景，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时等。
+数据订阅功能旨在帮助用户获取RDS for MySQL、DRDS的实时增量数据，用户能够根据自身业务需求自由消费增量数据，搭建/实现多种业务场景，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时等。
 
-**说明：** 订阅的源Oracle数据库的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+**说明：** 订阅的源RDS for MySQL和DRDS实例支持公共云和金融云的业务环境。
 
 |源数据库|支持订阅的数据类型|
 |----|---------|
@@ -571,7 +571,7 @@
 
 **说明：** 
 
--   原有的数据订阅功能使用成本相对较高。为提升用户体验，降低使用成本，阿里云对数据订阅功能进行升级，可实现数据的多下游重复消费，详情请参见[数据订阅（新）](cn.zh-CN/产品简介/功能特性/数据订阅（新）.md#)。
+-   原有的数据订阅功能使用成本相对较高。为提升用户体验，降低使用成本，阿里云对数据订阅功能进行升级，可实现数据的多下游重复消费，详情请参见[数据订阅（新）](cn.zh-CN/产品简介/功能特性/数据订阅（新版）.md#)。
 -   订阅的源数据库（例如MySQL、Oracle）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|支持订阅的数据类型|
