--- a/cn.zh-CN/API概览/数据订阅/配置订阅通道.md
+++ b/cn.zh-CN/API概览/数据订阅/配置订阅通道.md
@@ -38,7 +38,10 @@
 
  |
 |SubscriptionInstanceName|String|否|测试MySQL|订阅通道名称。|
-|SourceEndpointInstanceType|String|否|RDS|数据源的实例类型，取值：**RDS**。 **说明：** 默认取值为**RDS**。
+|SourceEndpointInstanceType|String|否|RDS|数据源的实例类型，取值： -   **RDS**：RDS实例
+-   **POLARDB**：POLARDB for MySQL集群
+
+ **说明：** 默认取值为**RDS**。
 
  |
 |SubscriptionInstanceNetworkType|String|否|vpc|订阅通道的网络类型，取值： -   **classic**：经典网络
