--- a/cn.zh-CN/API概览/数据订阅/配置订阅通道.md
+++ b/cn.zh-CN/API概览/数据订阅/配置订阅通道.md
@@ -13,8 +13,8 @@
 
     **说明：** 
 
-    -   旧版订阅通道支持订阅RDS for MySQL、DRDS和Oracle的数据。
-    -   新版订阅通道支持订阅RDS for MySQL和Oracle的数据。
+    -   旧版订阅通道支持订阅RDS for MySQL、DRDS的数据。
+    -   新版订阅通道支持订阅RDS for MySQL、POLARDB for MySQL和Oracle的数据。
 
 ## 请求参数 {#section_cs9_1iy_q1a .section}
 
@@ -22,7 +22,7 @@
 |:-|:-|:---|:--|:-|
 |Action|String|是|ConfigureSubscriptionInstance|要执行的操作，取值：ConfigureSubscriptionInstance。|
 |SubscriptionInstanceId|String|是|dtsxxxxxxxx|订阅实例ID。|
-|SourceEndpointInstanceId|String|是|rm-mxxxxxxxx|待订阅的RDS实例ID。|
+|SourceEndpointInstanceId|String|是|rm-mxxxxxxxx|待订阅的实例ID。|
 |SubscriptionObjects|List|是|\[\{"DBName":"dtstestdata","TableIncludes":\[\{"TableName":"customer"\}\]\}\]|订阅对象，格式为JSON串，例如： ``` {#codeblock_9jr_5l8_bq3}
 [
     {
