--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -287,14 +287,9 @@
  **说明：** 属于NoSQL数据库，无需结构迁移。
 
  |
-| -   自建Redis（仅支持单机架构）
+| 自建Redis（仅支持单机架构）
 
-2.8、3.0、3.2、4.0版本
-
--   阿里云Redis实例（仅支持单机架构）
-
-2.8、4.0版本
-
+ 2.8、3.0、3.2、4.0版本
 
  | -   自建Redis（单机/集群架构）
 
