--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -198,6 +198,15 @@
 -   增量数据迁移
 
  |
+| POLARDB for Oracle
+
+ 所有版本
+
+ | -   结构迁移
+-   全量数据迁移
+-   增量数据迁移
+
+ |
 | RDS for PPAS
 
  9.3、10版本
@@ -241,9 +250,14 @@
 -   增量数据迁移
 
  |
-| 自建PostgreSQL
+| -   自建PostgreSQL
 
- 9.4、9.5、9.6、10.1、10.8、10.9版本
+9.4、9.5、9.6、10.1、10.8、10.9版本
+
+-   RDS for PostgreSQL
+
+9.4、10版本
+
 
  | 自建PostgreSQL
 
