--- a/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
+++ b/cn.zh-CN/产品简介/迁移__同步__订阅支持的数据库.md
@@ -186,6 +186,15 @@
 -   增量数据迁移
 
  |
+| POLARDB for Oracle
+
+ 所有版本
+
+ | -   结构迁移
+-   全量数据迁移
+-   增量数据迁移
+
+ |
 | RDS for PPAS
 
  9.3、10版本
@@ -229,9 +238,14 @@
 -   增量数据迁移
 
  |
-| 自建PostgreSQL
+| -   自建PostgreSQL
 
- 9.4、9.5、9.6、10.1、10.8、10.9版本
+9.4、9.5、9.6、10.1、10.8、10.9版本
+
+-   RDS for PostgreSQL
+
+9.4、10版本
+
 
  | 自建PostgreSQL
 
