--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -161,11 +161,16 @@
 -   增量数据迁移
 
  |
-| 自建SQL Server
+| -   自建SQL Server
 
- 2005、2008、2008R2、2012、2014、2016版本
+2005、2008、2008R2、2012、2014、2016版本
 
- **说明：** 源库为2005版本时不支持增量迁移。
+**说明：** 源库为2005版本时不支持增量迁移。
+
+-   RDS for SQL Server
+
+2008、2008R2、2012、2014、2016版本
+
 
  | 自建SQL Server
 
