--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -18,7 +18,7 @@
 -   [移除同步对象](../../../../cn.zh-CN/用户指南/实时同步/移除同步对象.md#)
 
  |
-|完善的性能查询体系|数据同步提供同步延迟、同步性能\(RPS、流量\) 趋势图，用户可以方便查看同步链路的性能趋势。|[查看同步性能](../../../../cn.zh-CN/用户指南/实时同步/查看同步性能.md#)|
+|完善的性能查询体系|数据同步提供同步延迟、同步性能（RPS、流量） 趋势图，用户可以方便查看同步链路的性能趋势。|[查看同步性能](../../../../cn.zh-CN/用户指南/实时同步/查看同步性能.md#)|
 |完善的监控体系|数据同步提供同步作业状态、同步延迟的报警监控功能。用户可以根据业务敏感度，自定义同步延迟报警阈值。|[配置监控报警](../../../../cn.zh-CN/用户指南/实时同步/配置监控报警.md#)|
 |多种ETL特性| -   支持库表列三级对象名映射，可以实现对源跟目标实例的库名、表名或列名不同的两个对象之间进行数据同步。
 -   支持迁移数据过滤，可以对待同步的表设置某种SQL条件过滤要所需同步的数据。
