--- a/cn.zh-CN/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/数据迁移/支持的数据库和迁移类型.md
@@ -270,6 +270,9 @@
 |-   结构迁移
 -   全量数据迁移
 -   增量数据迁移 |
+|云原生数据仓库AnalyticDB PostgreSQL|-   结构迁移
+-   全量数据迁移
+-   增量数据迁移 |
 |-   自建PostgreSQL
 
 9.4、9.5、9.6、10.x、11.x、12版本
