--- a/cn.zh-CN/产品简介/功能使用限制/数据库限制（数据同步）.md
+++ b/cn.zh-CN/产品简介/功能使用限制/数据库限制（数据同步）.md
@@ -107,7 +107,7 @@
 |部分非法值处理，分析型数据库MySQL版（3.0）与MySQL不兼容。|数据同步失败。|
 |列最大长度默认限制为16MB。|数据同步失败。|
 
-## 目标库为Maxcompute
+## 目标库为MaxCompute
 
 |使用限制|超出限制产生的影响|
 |:---|:--------|
