--- a/intl.zh-CN/产品简介/功能使用限制/数据库限制（数据同步）.md
+++ b/intl.zh-CN/产品简介/功能使用限制/数据库限制（数据同步）.md
@@ -56,7 +56,7 @@
 |使用限制|超出限制产生的影响|
 |:---|:--------|
 |最多支持1024张表。|数据同步失败。|
-|支持同步的DDL语句：CREATE TABLE、DROP TABLE、RENAME TABLE、TRUNCATE TABLE、ADD COLUMN、DROP COLUMN。|数据同步失败。|
+|支持同步的DDL语句：CREATE TABLE、DROP TABLE、ALTER TABLE、RENAME TABLE、TRUNCATE TABLE、ADD COLUMN、DROP COLUMN。|数据同步失败。|
 |同步对象不是整库时，源库不可执行Online DDL操作。|数据同步失败（提示某张临时表不存在或者已经存在）。|
 |待同步的数据表必须具备主键，且主键的值不能为Null。|数据同步失败或无法启动数据同步作业。|
 |源中不能包含分析型数据库MySQL版不支持的非法值。|数据同步失败。|
