--- a/cn.zh-CN/.md
+++ b/cn.zh-CN/.md
@@ -10,7 +10,18 @@
 
 |发布时间|发布内容|相关文档|
 |----|----|----|
-|2020年8月|支持从MySQL（例如RDS MySQL, Polar MySQL, 自建MySQL）迁移至有公网IP的自建Kafka，是数据同步场景的补充。|[从RDS MySQL迁移至自建Kafka](/cn.zh-CN/数据迁移/从阿里云迁移至自建数据库/从RDS MySQL迁移至自建Kafka.md)|
+|2020年9月|支持从自建TiDB同步到云原生数据仓库AnalyticDB MySQL，帮助您轻松实现数据的流转，将企业数据集中分析。|准备中|
+|支持从MySQL（例如RDS MySQL、Polar MySQL、自建MySQL）同步到PolarDB-X（暂不支持结构初始化），帮助您实现增量数据的实时同步。|准备中|
+|支持从自建Oralce迁移到AnalyticDB for PostgreSQL，可以轻松实现数据的流转。|准备中|
+|在自建Oracle增量迁移至PolarDB-O的场景下，支持对无主键表ROWID值的增量数据迁移，可用于对无主键表的数据去重和数据校验。|准备中|
+|同步的目标库支持Elasticsearch 7.4版本。|-   [从ECS上的自建MySQL同步至Elasticsearch](/cn.zh-CN/数据同步/MySQL同步至其他数据库/从ECS上的自建MySQL同步至Elasticsearch.md)
+-   [从PolarDB MySQL同步至Elasticsearch](/cn.zh-CN/数据同步/PolarDB数据同步/从PolarDB MySQL同步至Elasticsearch.md) |
+|数据迁移和同步新增一键诊断功能，通过分析增量阶段的性能数据，帮助您快速定位问题并提供诊断建议。|准备中|
+|金融云支持从DB2 for i同步至自建MySQL、RDS MySQL（暂不支持结构初始化）。**说明：** 目前仅支持上海地域。
+
+|准备中|
+|2020年8月|支持从MySQL（例如RDS MySQL、Polar MySQL、自建MySQL）迁移至有公网IP的自建Kafka，是数据同步场景的补充。|[从RDS MySQL迁移至自建Kafka](/cn.zh-CN/数据迁移/从阿里云迁移至自建数据库/从RDS MySQL迁移至自建Kafka.md)|
+|支持RDS PPAS 9.3、9.6、10.0版本到PolarDB-O的数据迁移。|准备中|
 |2020年7月|发布SQL Server数据库多库增量迁移功能，可在一个数据迁移任务中增量迁移多个数据库，极大提升了提升迁移效率。|[从自建SQL Server增量迁移至RDS SQL Server](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为SQL Server/从自建SQL Server增量迁移至RDS SQL Server.md)|
 |发布Kafka多Partition（分区）的同步策略配置功能，可调整同步策略将数据同步至多个Partition以提升同步性能。|-   [Kafka Partition同步策略说明](/cn.zh-CN/数据同步/同步作业管理/Kafka Partition同步策略说明.md)
 -   [从RDS MySQL同步至自建Kafka集群](/cn.zh-CN/数据同步/MySQL同步至其他数据库/从RDS MySQL同步至自建Kafka集群.md) |
@@ -22,7 +33,7 @@
 -   [查看同步链路状态和性能](/cn.zh-CN/数据同步/同步作业管理/查看同步链路状态和性能.md) |
 |发布MySQL到Clickhouse的同步功能，支持MySQL结构、全量数据、增量数据同步到ClickHouse，构建实时的数仓。|[从RDS MySQL同步至ClickHouse集群](/cn.zh-CN/数据同步/MySQL同步至其他数据库/从RDS MySQL同步至ClickHouse集群.md)|
 |数据迁移功能支持迁移RDS MariaDB的无主键表。|[从RDS MariaDB迁移至RDS MySQL](/cn.zh-CN/数据迁移/同一阿里云账号实例间迁移/从RDS MariaDB迁移至RDS MySQL.md)|
-|支持从自建Oracle迁移至PolarDB MySQL。|[数据迁移操作指导](/cn.zh-CN/快速入门/数据迁移操作指导.md)|
+|支持从自建Oracle迁移至PolarDB MySQL。|[从自建Oracle迁移至PolarDB MySQL](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB MySQL.md)|
 |2020年6月|华东2（上海）、华北2（北京）和华南1（深圳）支持从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL，帮助您构建实时数仓。|[从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL.md)|
 |支持迁移MongoDB 4.2版本的数据库。|[DTS数据迁移方案概览](/cn.zh-CN/数据迁移/DTS数据迁移方案概览.md)|
 |支持将云原生分布式数据库PolarDB-X（原DRDS）中基于私有RDS实例创建的数据库作为同步的源库或目标库。|[DTS数据同步方案概览](/cn.zh-CN/数据同步/DTS数据同步方案概览.md)|
@@ -35,7 +46,8 @@
 |ConfigureSynchronizationJob接口支持将DataHub作为同步的目标库。|[t17259.md\#](/cn.zh-CN/API参考/数据同步/配置同步作业.md)|
 |2020年3月|支持从TiDB迁移至RDS MySQL、PolarDB MySQL、自建MySQL数据库。|[从自建TiDB全量迁移至RDS MySQL](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为TiDB/从自建TiDB全量迁移至RDS MySQL.md)|
 |支持PolarDB MySQL的双向同步功能，可应用于业务多活场景。|[PolarDB MySQL集群间的双向同步](/cn.zh-CN/数据同步/PolarDB数据同步/PolarDB MySQL集群间的双向同步.md)|
-|支持从SQL Server同步至AnalyticDB for PostgreSQL，可应用于实时数据分析场景。|[从RDS SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL](/cn.zh-CN/数据同步/SQL Server数据同步/从RDS SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL.md)|
+|支持从SQL Server同步至AnalyticDB for PostgreSQL，可应用于实时数据分析场景。|-   [从RDS SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL](/cn.zh-CN/数据同步/SQL Server数据同步/从RDS SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL.md)
+-   [从ECS上的自建SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL](/cn.zh-CN/数据同步/SQL Server数据同步/从ECS上的自建SQL Server同步至云原生数据仓库AnalyticDB PostgreSQL.md) |
 |支持PolarDB-O集群间的数据迁移、数据同步功能，可应用于数据灾备、读写分离、就近查询等场景。|-   [PolarDB-O集群间的数据迁移](/cn.zh-CN/数据迁移/同一阿里云账号实例间迁移/PolarDB-O集群间的数据迁移.md)
 -   [PolarDB-O集群间的单向同步](/cn.zh-CN/数据同步/PolarDB数据同步/PolarDB-O集群间的单向同步.md) |
 |华东2（上海）地域支持将PolarDB-O集群的增量变更同步至Kafka，扩展消息处理能力。|[从PolarDB-O集群同步至自建Kafka](/cn.zh-CN/数据同步/PolarDB数据同步/从PolarDB-O集群同步至自建Kafka.md)|
@@ -46,7 +58,7 @@
 |2020年2月|在数据同步的过程中，支持通过[DMS企业版](https://help.aliyun.com/document_detail/47550.html)来执行在线DDL结构变更。 **说明：** 如果数据同步作业的创建时间早于2020年2月14日，且2020年2月14日及之后未重新启动过，您需要将数据同步作业暂停并重新启动才可以支持该功能。
 
 |[不锁表结构变更](https://help.aliyun.com/document_detail/98373.html)|
-|支持迁移Oracle9i、10g、11g、12c、18c或19c版本的数据库，满足多种Oracle迁移场景。|-   [从自建Oracle迁移至PolarDB-O集群（迁移结构）](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB-O集群（迁移结构）.md)
+|支持迁移Oracle 9i、10g、11g、12c、18c或19c版本的数据库，满足多种Oracle迁移场景。|-   [从自建Oracle迁移至PolarDB-O集群（迁移结构）](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB-O集群（迁移结构）.md)
 -   [从自建Oracle迁移至PolarDB-O集群（迁移数据）](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB-O集群（迁移数据）.md) |
 |支持迁移PostgreSQL 12版本的数据库。|[从自建PostgreSQL（10.1-12版本）增量迁移至RDS PostgreSQL](/cn.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为PostgreSQL/从自建PostgreSQL（10.1-12版本）增量迁移至RDS PostgreSQL.md)|
 |支持对处于迁移中的PolarDB MySQL集群（源或目标）执行迁移可用区操作，且不会引起迁移任务中断。|无|
