--- a/intl.zh-CN/.md
+++ b/intl.zh-CN/.md
@@ -6,6 +6,8 @@
 
 |发布时间|发布内容|相关文档|
 |----|----|----|
+|2020年8月|支持目标库Elasticsearch 7.4版本的同步。|-   [从ECS上的自建MySQL同步至Elasticsearch](/intl.zh-CN/数据同步/MySQL同步至其他数据库/从ECS上的自建MySQL同步至Elasticsearch.md)
+-   [从PolarDB MySQL同步至Elasticsearch](/intl.zh-CN/数据同步/PolarDB数据同步/从PolarDB MySQL同步至Elasticsearch.md) |
 |2020年7月|DTS产品接入至云监控平台，可以对实例重要的监控指标设置报警规则，让您在第一时间得知指标数据发生异常，帮您迅速定位处理故障。|[通过云监控平台为DTS任务设置报警规则](/intl.zh-CN/实例管理/通过云监控平台为DTS任务设置报警规则.md)|
 |周期性全量数据迁移升级为数据集成功能，通过该功能可以帮助您构建更加灵活的数据仓库（例如构建T+1的周期性数仓）。|-   [数据集成调度策略说明](/intl.zh-CN/数据集成/数据集成调度策略说明.md)
 -   [配置RDS MySQL间的数据集成任务](/intl.zh-CN/数据集成/配置RDS MySQL间的数据集成任务.md) |
@@ -13,6 +15,7 @@
 -   [查看增量迁移链路状态和性能](/intl.zh-CN/数据迁移/迁移任务管理/查看增量迁移链路状态和性能.md)
 -   [查看同步链路状态和性能](/intl.zh-CN/数据同步/同步作业管理/查看同步链路状态和性能.md) |
 |数据迁移功能支持迁移RDS MariaDB的无主键表。|[从RDS MariaDB迁移至RDS MySQL](/intl.zh-CN/数据迁移/同一阿里云账号实例间迁移/从RDS MariaDB迁移至RDS MySQL.md)|
+|支持从自建Oracle迁移至PolarDB MySQL。|[从自建Oracle迁移至PolarDB MySQL](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB MySQL.md)|
 |2020年6月|华东2（上海）、华北2（北京）和华南1（深圳）支持从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL，帮助您构建实时数仓。|[从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至云原生数据仓库AnalyticDB PostgreSQL.md)|
 |支持迁移MongoDB 4.2版本的数据库。|[DTS数据迁移方案概览](/intl.zh-CN/数据迁移/DTS数据迁移方案概览.md)|
 |支持将云原生分布式数据库PolarDB-X（原DRDS）中基于私有RDS实例创建的数据库作为同步的源库或目标库。|[DTS数据同步方案概览](/intl.zh-CN/数据同步/DTS数据同步方案概览.md)|
@@ -31,7 +34,7 @@
 |2020年2月|在数据同步的过程中，支持通过[DMS企业版](https://www.alibabacloud.com/help/zh/doc-detail/57278.htm)来执行在线DDL结构变更。 **说明：** 如果数据同步作业的创建时间早于2020年2月14日，且2020年2月14日及之后未重新启动过，您需要将数据同步作业暂停并重新启动才可以支持该功能。
 
 |[不锁表结构变更](https://www.alibabacloud.com/help/zh/doc-detail/98373.htm)|
-|支持迁移Oracle9i、10g、11g、12c、18c或19c版本的数据库，满足多样的去O场景。|[从自建Oracle迁移至PolarDB-O集群](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB-O集群.md)|
+|支持迁移Oracle 9i、10g、11g、12c、18c或19c版本的数据库，满足多样的Oracle迁移场景。|[从自建Oracle迁移至PolarDB-O集群](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Oracle/从自建Oracle迁移至PolarDB-O集群.md)|
 |支持迁移PostgreSQL 12版本的数据库。|[从自建PostgreSQL（10.1-12版本）增量迁移至RDS PostgreSQL](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为PostgreSQL/从自建PostgreSQL（10.1-12版本）增量迁移至RDS PostgreSQL.md)|
 |支持对处于迁移中的PolarDB MySQL集群（源或目标）执行迁移可用区操作，且不会引起迁移任务中断。|无|
 |2020年1月|支持为子账号授予具体DTS实例的权限，同时，可以通过角色扮演的方式，实现跨账号的DTS实例授权，满足多种场景下的实例权限控制。|[通过自定义策略授权子账号管理DTS](/intl.zh-CN/RAM授权管理/通过自定义策略授权子账号管理DTS.md)|
@@ -48,7 +51,6 @@
 
 |[使用DTS将MongoDB Atlas数据库迁移至阿里云](/intl.zh-CN/用户指南/数据迁移和同步/第三方云迁移到阿里云/使用DTS将MongoDB Atlas数据库迁移至阿里云.md)|
 |2019年9月|支持迁移RDS MariaDB、PolarDB-O集群、SQL Server 2017。|[支持的数据库](/intl.zh-CN/产品简介/支持的数据库.md)|
-|2019年8月|OpenAPI新增查询、配置监控报警相关接口。|[API概览]()|
 |2019年7月|支持迁移MongoDB 4.0版本、PostgreSQL 10.x版本的数据库。|[支持的数据库](/intl.zh-CN/产品简介/支持的数据库.md)|
 |支持异常告警恢复通知的功能，当检测到异常恢复后，将发送短信通知用户，降低用户运维成本。|无|
 |2019年6月|优化数据订阅的在线查询功能，提升数据订阅的使用体验。|[查看订阅数据](/intl.zh-CN/数据订阅/数据订阅（新版）/查看订阅数据.md)|
@@ -62,7 +64,6 @@
 |:---|:---|----|
 |2018年7月3日|支持从MySQL迁移至PolarDB MySQL。|[从自建MySQL迁移至PolarDB MySQL](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为MySQL/从自建MySQL迁移至PolarDB MySQL.md)|
 |2018年6月12日|支持从DB2迁移至MySQL。|[从自建Db2迁移至RDS MySQL](/intl.zh-CN/数据迁移/从自建数据库迁移至阿里云/源库为Db2/从自建Db2迁移至RDS MySQL.md)|
-|2018年6月5日|OpenAPI支持指定增量迁移或增量同步的拉取日志起始时间点。|无|
 |2015年10月30日|支持RDS实例间的数据同步。|-   [RDS MySQL实例间的双向同步](/intl.zh-CN/数据同步/MySQL间数据同步/RDS MySQL实例间的双向同步.md)
 -   [RDS MySQL实例间的单向同步](/intl.zh-CN/数据同步/MySQL间数据同步/RDS MySQL实例间的单向同步.md) |
 |2015年8月11日|-   支持在数据迁移的过程中，自动在目标实例中创建数据库。
