--- a/cn.zh-CN/API参考/参数补充说明/迁移对象配置说明.md
+++ b/cn.zh-CN/API参考/参数补充说明/迁移对象配置说明.md
@@ -17,15 +17,18 @@
         "NewDBName":"待迁移的库在目标实例中映射的库名",
         "SchemaName":"待迁移的Schema名",
         "NewSchemaName":"待迁移的Schema在目标实例中映射的Schema名",
+        "AllTable": false,
         "TableIncludes":[
             {
                 "TableName":"待迁移的表名",
-                "NewTableName":"待迁移的表在目标实例中映射的表名",
-                "FilterCondition":"SQL过滤条件",
+                "NewTableName":"待迁移的表在目标实例中映射的别名",
+                "FilterCondition":"where condition",
+                "PrimaryKey":"待迁移表的主键列，多列用逗号分隔",
+                "PartKey":"待迁移表的分布列，多列用逗号分隔",
                 "ColumnIncludes":[
                     {
-                        "ColumnName":"待迁移表中需迁移的列名",
-                        "NewColumnName":"待迁移的列在目标表中映射的列名"
+                        "ColumnName":"待迁移表中需迁移列名",
+                        "NewColumnName":"待迁移的列在目标实例中映射的列名"
                     }
                 ],
                 "ColumnExcludes":[{
@@ -44,6 +47,11 @@
 |--|--|
 |SchemaName|当源库为SQL Server或PostgreSQL时，本参数才可用且必须传入。|
 |NewSchemaName|当目标库为SQL Server或PostgreSQL时，本参数才可用。|
+|ALLTABLE|待迁移schema下所有表是否都需配置，默认为false，也可填true。填写为false时，需传入参数TableIncludes和TableExcludes
+
+填写为true时，只需传入参数TableIncludes。 |
+|PrimaryKey|当目标库为云原生数仓AnalyticDB MySQL、AnalyticDB PostgreSQL时，本参数才可用且必须传入。|
+|PartKey|当目标库为云原生数仓AnalyticDB MySQL、AnalyticDB PostgreSQL时，本参数才可用且必须传入。|
 |ColumnName、ColNewColumnNameumnName|需保障源表的列名和目标表的列名的顺序一一对应，否则DTS可能找不到对应的列。|
 |FilterCondition|过滤条件，只有满足过滤条件的数据才会被迁移到目标数据库中。 **说明：**
 
@@ -84,13 +92,14 @@
 ```
 [{
     "DBName": "dtstestdata",
+    "AllTable": false,    
     "TableExcludes": [{
         "TableName": "order.*"
     }]
 }]
 ```
 
-示例五：迁移dtstestdata库中的customer表，且只迁移ID列中的值大于100的数据。
+示例六：迁移dtstestdata库中的customer表，且只迁移ID列中的值大于100的数据。
 
 ```
 [{
@@ -102,7 +111,7 @@
 }]
 ```
 
-示例六：迁移dtstestdata库中的customer表，且只迁移表中的ID和address列。
+示例七：迁移dtstestdata库中的customer表，且只迁移表中的ID和address列。
 
 ```
 [{
@@ -116,6 +125,19 @@
                 "ColumnName": "address"
             }
         ]
+    }]
+}]
+```
+
+示例八：迁移dtstestdata库中的customer表至云原生数仓AnalyticDB MySQL、AnalyticDB PostgreSQL，且源表customer在目标表中的主键、分布键设为CREATE\_TIME。
+
+```
+[{
+    "SchemaName": "dtstestdata",
+    "TableIncludes": [{
+        "TableName": "customer",
+        "PrimaryKey":"CREATE_TIME",
+        "PartKey":"CREATE_TIME",
     }]
 }]
 ```
